# statwhy

./: .github-markdown.css  .gitignore  .statwhy.conf  Dockerfile  LICENSE  README.html  README.md  demo_comprehensive_features.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
.statwhy_cache/: cache.db
cameleer/: .gitignore  LICENSE  cameleer.opam
cameleer/plugin/: cameleerBHL.ml  plugin_cameleer.ml
cameleer/src/: declaration.ml  uterm.ml  why3ocaml_driver.ml
cameleer/statwhy/: .statwhy.conf  LICENSE  dune
cameleer/statwhy/genconf/: genconf.ml
cameleer/statwhy/lib/: alexandergovern.mlw  atomicFormulas.mlw  bartlett.mlw  binom.mlw  cameleerBHL.mlw  cameleerReal.mlw  chisquare.mlw  dune  dunnett.mlw  dunnett.mlw.old  fligner.mlw  ftest.mlw  hof.mlw  kruskal.mlw  ks.mlw  logicalFormula.mlw  manwhitneyu.mlw  normality_test.mlw  oneway.mlw  parcomp.mlw  poisson.mlw  statBHL.mlw  statELHT.mlw  steel.mlw  steel_dwass.mlw  ttest.mlw  tukey_HSD.mlw  utility.mlw  utility.mlw.old  wilcoxon.mlw  williams.mlw
cameleer/statwhy/lib/alexandergovern/: why3session.xml
cameleer/statwhy/lib/atomicFormulas/: atomicFormulas_Ppl_Eq_variance_ref_1.v  atomicFormulas_Ppl_Ppl_check_variance_normald_param_1.v  atomicFormulas_Ppl_Ppl_check_variance_normald_param_2.v  atomicFormulas_Ppl_eq_population_soundness_1.v  atomicFormulas_Ppl_eq_real_number_listqt_refl_1.v  atomicFormulas_Ppl_eq_real_number_listqt_refl_2.v  atomicFormulas_Ppl_eq_real_number_listqt_symm_1.v  atomicFormulas_Ppl_is_prob_dist_const_implies_is_prob_dist_const_1.v  atomicFormulas_Ppl_is_prob_dist_const_implies_is_prob_dist_const_2.v  atomicFormulas_Ppl_is_prob_dist_const_implies_is_prob_dist_const_3.v  why3session.xml  why3shapes
cameleer/statwhy/lib/hof/: #hof_Hof_for_all_correctness_1.v#  #hof_Hof_for_all_correctness_2.v#  hof_Hof_fold__append_1.v  hof_Hof_fold__append_2.v  hof_Hof_for_all_correctness_1.v  hof_Hof_for_all_correctness_2.v  hof_Hof_for_all_correctness_4.v  why3session.xml
cameleer/statwhy/lib/logicalFormula/: #logicalFormula_LanguageData_Refl_1.v#  logicalFormula_LanguageData_Refl_1.v  logicalFormula_LanguageData_Refl_2.v  why3session.xml
cameleer/statwhy/lib/statBHL/: why3session.xml
cameleer/statwhy/lib/statELHT/: why3session.xml
cameleer/statwhy/lib/ttest/: why3session.xml
cameleer/statwhy/lib/utility/: utility_Utility_lem_combinations_length_1.v  why3session.xml
cameleer/statwhy/plugin/: computation.ml  dune  plugin_statwhy.ml  reduction.ml
doc/: LICENSE  why3doc.org
doc/doc_examples/: example1.ml  example2.ml  example3.ml  example4.ml  example5.ml  example6.ml
doc/doc_examples/mlw/: ex_dunnett.mlw  ex_ftest.mlw  ex_kruskal.mlw  ex_normality_test.mlw  ex_normality_test.mlw.bak  ex_steel_dwass.mlw  ex_tukey_hsd.mlw
doc/doc_examples/mlw/ex_normality_test/: why3session.xml  why3shapes.gz.bak
examples/: clinical_anova_treatments.csv  clinical_chi2_response.csv  clinical_mannwhitney_arms.csv  clinical_ttest_blood_pressure.csv  clinical_wilcoxon_pain.csv  dataset_metadata.json  education_student_performance.csv  education_teaching_methods.csv  example1.ml  example2.ml  example3.ml  example4.ml  example5.ml  example6.ml  financial_portfolio_performance.csv  financial_risk_assessment.csv  financial_trading_strategies.csv  manufacturing_equipment_performance.csv  manufacturing_process_variance.csv  manufacturing_production_quality.csv  p_value_hacking.ml  research_dunnett_example.csv  research_experimental_groups.csv  research_survey_responses.csv
examples/executed/: 1samp_t_test.ml  compare_with_existing_drugs.ml  multiple_comparison_methods.mlw  multiple_comparison_methods_full.mlw  multiple_hypotheses.mlw  multiple_hypotheses_full.mlw  p_value_hacking.ml
examples/executed/1samp_t_test/: why3session.xml  why3shapes
examples/executed/compare_with_existing_drugs/: why3session.xml  why3shapes
examples/executed/multiple_comparison_methods/: why3session.xml  why3shapes
examples/executed/multiple_comparison_methods_full/: why3session.xml  why3shapes
examples/executed/multiple_hypotheses/: why3session.xml  why3session.xml.bak  why3shapes  why3shapes.bak
examples/executed/multiple_hypotheses_full/: why3session.xml  why3shapes
examples/executed/p_value_hacking/: why3session.xml  why3shapes
examples/mlw/: ex_alexandergovern.mlw  ex_bartlett.mlw  ex_binom.mlw  ex_chisquare.mlw  ex_dunnett.mlw  ex_fligner.mlw  ex_ftest.mlw  ex_kruskal.mlw  ex_ks.mlw  ex_manwhitneyu.mlw  ex_multiple_hypotheses.mlw  ex_normality_test.mlw  ex_oneway.mlw  ex_steel.mlw  ex_steel_dwass.mlw  ex_ttest.mlw  ex_tukey_hsd.mlw  ex_wilcoxon.mlw  ex_williams.mlw
examples/mlw/ex_normality_test/: why3session.xml.bak
performance_results/: PARALLEL_EFFICIENCY_IMPROVEMENTS.md  README.md  advanced_parallel_20250814_170323.json  cache_performance_20250814_165258.json  cache_performance_20250814_170323.json  edge_cases_20250814_165258.json  edge_cases_20250814_170323.json  load_testing_20250814_165258.json  load_testing_20250814_170323.json  memory_efficiency_20250814_165258.json  memory_efficiency_20250814_170323.json  multi_threaded_20250814_165258.json  multi_threaded_20250814_170323.json  performance_report_20250814_165258.txt  performance_report_20250814_170323.txt  single_threaded_20250814_165258.json  single_threaded_20250814_170323.json  summary_20250814_165258.json  summary_20250814_170323.json
src/statwhy/: __init__.py  automated_testing.py  cache.py  cli.py  clinical_trials.py  core.py  data_generator.py  error_messages.py  exceptions.py  financial_risk.py  manufacturing_quality.py  models.py  performance_optimization.py  performance_tester.py  plugin_system.py  python_integration.py  utils.py  verifiers.py  web.py
src/statwhy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/statwhy/static/: app.js  examples.js  style.css
src/statwhy/templates/: examples.html  index.html
test_templates/: index.html
tests/: test_basic.py  test_results.txt
