(install
 (section share_root)
 (files
  (alexandergovern.mlw as why3/stdlib/alexandergovern.mlw)
  (atomicFormulas.mlw as why3/stdlib/atomicFormulas.mlw)
  (bartlett.mlw as why3/stdlib/bartlett.mlw)
  (binom.mlw as why3/stdlib/binom.mlw)
  (cameleerBHL.mlw as why3/stdlib/cameleerBHL.mlw)
  (cameleerReal.mlw as why3/stdlib/cameleerReal.mlw)
  (chisquare.mlw as why3/stdlib/chisquare.mlw)
  (dunnett.mlw as why3/stdlib/dunnett.mlw)
  (hof.mlw as why3/stdlib/hof.mlw)
  (ftest.mlw as why3/stdlib/ftest.mlw)
  (kruskal.mlw as why3/stdlib/kruskal.mlw)
  (logicalFormula.mlw as why3/stdlib/logicalFormula.mlw)
  (normality_test.mlw as why3/stdlib/normality_test.mlw)
  (oneway.mlw as why3/stdlib/oneway.mlw)
  (parcomp.mlw as why3/stdlib/parcomp.mlw)
  (poisson.mlw as why3/stdlib/poisson.mlw)
  (statBHL.mlw as why3/stdlib/statBHL.mlw)
  (statELHT.mlw as why3/stdlib/statELHT.mlw)
  (steel.mlw as why3/stdlib/steel.mlw)
  (steel_dwass.mlw as why3/stdlib/steel_dwass.mlw)
  (ttest.mlw as why3/stdlib/ttest.mlw)
  (tukey_HSD.mlw as why3/stdlib/tukey_HSD.mlw)
  (utility.mlw as why3/stdlib/utility.mlw)
  (williams.mlw as why3/stdlib/williams.mlw))
(package cameleer))
